--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
   "name": "fs-fns__reverse-geocode",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/FlavioSant/fs-fns__reverse-geocode.git",
   "author": "Flavio Santos <flavio.santos@allcomsistemas.com.br>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node-fetch": "^2.5.10",
+    "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
+  },
+  "files": [
+    "lib/**/*"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "coverage": "jest --coverage",
+    "prepublishOnly": "yarn build",
+    "test": "jest",
+    "watch": "jest --watch"
   }
 }
