--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "install-peers-cli": "^2.2.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
@@ -22,6 +23,7 @@
   "scripts": {
     "build": "tsc",
     "coverage": "jest --coverage",
+    "prepare": "install-peers",
     "prepublishOnly": "yarn build",
     "test": "jest",
     "watch": "jest --watch"
