--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   ],
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@types/node-fetch": "^2.5.10",
     "install-peers-cli": "^2.2.0",
     "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
   "dependencies": {},
-  "peerDependencies": {
-    "axios": "^0.21.1"
-  },
+  "peerDependencies": {},
   "scripts": {
     "build": "tsc",
     "coverage": "jest --coverage",
